--- a/index.html
+++ b/index.html
@@ -6,5 +6,7 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/protein_crepe.html">Protein Crepe</a>
+    <ul>
+        <li><a href="recipes/protein_crepe.html">Protein Crepe</a></li>
+        <li><a href="recipes/chicken_vegetable.html">Chicken and vegetable</a></li>
 </body>
